mynode-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mynode-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/issuer: "selfsigned"
spec:
  rules:
  - host: mynodeapp.com
    http:
      paths:
      - backend:
          serviceName: mynode-app
          servicePort: 80
