nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: example
  namespace: ingress-nginx
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
